# obsidian-cli

./: .gitignore  Makefile  README.md  odcli  pyproject.toml
.github/workflows/: publish.yml
src/obsidian_cli/: __main__.py  cli.py  commands.py  discovery.py  plugins.py  ssh_config.py  vault.py
src/obsidian_cli/templates/: SKILL.md.j2
tests/: test_cli.py
