[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "odcli"
version = "0.1.6"
description = "A small CLI for reading and writing notes in a local Obsidian vault."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "odcli contributors" }
]
dependencies = []
keywords = ["obsidian", "cli", "markdown", "notes", "vault"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
  "Environment :: Console",
]

[project.scripts]
odcli = "obsidian_cli.cli:main"
obsidian-cli = "obsidian_cli.cli:main"

[dependency-groups]
dev = [
  "build>=1.2.2",
  "ruff>=0.14.0",
  "twine>=6.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
