[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "odcli"
version = "0.1.12"
description = "CLI for reading and writing Obsidian vault notes — locally or over SSH."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "odcli contributors" }
]
dependencies = ["jinja2>=3.1"]
keywords = ["obsidian", "cli", "markdown", "notes", "vault", "ssh"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
  "Environment :: Console",
]

[project.scripts]
odcli = "obsidian_cli.cli:main"
obsidian-cli = "obsidian_cli.cli:main"

[dependency-groups]
dev = [
  "build>=1.2.2",
  "ruff>=0.14.0",
  "setuptools>=68",
  "twine>=6.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
obsidian_cli = ["templates/*.j2"]

[tool.uv]
package = true
